I revised the post layout.
I added Open Graph metadata and Twitter Card metadata to the posts. I
changed the post layout. I added navigation links to the top and bottom
of the blog posts.

--- a/_posts/2012-12-28-goodbye-2012-welcome-2013.md
+++ b/_posts/2012-12-28-goodbye-2012-welcome-2013.md
@@ -3,6 +3,12 @@ layout: post
 title: Goodbye 2012, Welcome 2013
 description: After a work-related hiatus, I am back to improving my GitHub Pages site and catching up on the items that I want to blog about. In this post, I will give you an update of what I have been working on and what I am planning on blogging about for the rest of my vacation.
 disqus_identifier: 2012-12-28-goodbye-2012-welcome-2013
+author: Michael F. Collins, III
+author_first_name: Michael
+author_last_name: Collins
+author_gender: male
+twitter_creator: mfcollins3
+modified_time: 2013-04-16
 ---
 2012 is almost over, and it seems to have passed by in a blur. I've been heads down for most of the year working on [Neuron ESB](http://www.neuronesb.com) in preparation for the 3.0 release which is due out within days. I was very fortunate to be able to take a break during Christmas week and will be off through New Years Day before returning to wrap up any bugs or loose ends on the Neuron ESB 3.0 release so that it can go out the door. After that, my professional focus will be on getting ready for the vNext release of Neuron, which I hope will be a 4.0 release in late 2013 or early 2014.
 
